--- a/src/assets/styles/UserCard.scss
+++ b/src/assets/styles/UserCard.scss
@@ -3,6 +3,7 @@
     box-shadow: 11px 6px 10px 5px rgba(123, 210, 195, 0.16);
     border-radius: 12px;
     width: 386px;
+    max-width: 90%;
     height: 227px;
     background: #FFFFFF;
     padding: 20px;
@@ -94,5 +95,24 @@
             color: #99A7AF;
             margin-bottom: 15px;
         }
+    }
+}
+
+/* Portrait phones and smaller */
+@media (max-width: 1000px) {
+    .user-card {
+        margin-left: auto !important;
+        margin-right: auto !important;
+
+        .graphical-data {
+            .avatar {
+                width: 75px;
+                height: 60px;
+            }
+        }
+    }
+
+    .card-container {
+        max-width: 100vw;
     }
 }
